2003-06-09  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am: Removed rules serpent, since that is not commited
	yet.

2003-06-08  Moritz Schulte  <moritz@g10code.com>

	* pubkey.c (gcry_pk_encrypt): Improve calculation for size of the
	format string.

2003-06-07  Moritz Schulte  <moritz@g10code.com>

	* arcfour.c, bithelp.h, blowfish.c, cast5.c, cipher.c, crc.c,
	des.c, dsa.c, elgamal.c, md4.c, md5.c, md.c, primegen.c, pubkey.c,
	rand-internal.h, random.c, random.h, rijndael.c, rmd160.c,
	rmd160test.c, rmd.h, rndeged.c, rndlinux.c, rndunix.c, rndw32.c,
	rsa.c, sha1.c, sha256.c, sha512.c, tiger.c, twofish.c: Edited all
	preprocessor instructions to remove whitespace before the '#'.
	This is not required by C89, but there are some compilers out
	there that don't like it.  Replaced any occurence of the now
	deprecated type names with the new ones.
	
2003-06-04  Moritz Schulte  <moritz@g10code.com>

	* pubkey.c (gcry_pk_encrypt): Construct an arg_list and use
	gcry_sexp_build_array instead of gcry_sexp_build.
	(gcry_pk_sign): Likewise.
	(gcry_pk_genkey): Likewise.

2003-06-01  Moritz Schulte  <moritz@g10code.com>

	* dsa.c (_gcry_dsa_generate): Do not check wether the algorithm ID
	does indeed belong to DSA.
	(_gcry_dsa_sign): Likewise.
	(_gcry_dsa_verify): Likewise.
	(_gcry_dsa_get_nbits): Likewise.

	* elgamal.c (_gcry_elg_check_secret_key): Do not check wether the
	algorithm ID does indeed belong to ElGamal.
	(_gcry_elg_encrypt): Likewise.
	(_gcry_elg_decrypt): Likewise.
	(_gcry_elg_sign): Likewise.
	(_gcry_elg_verify): Likewise.
	(_gcry_elg_get_nbits): Likewise.
	(_gcry_elg_generate): Likewise.

	* rsa.c (_gcry_rsa_generate): Do not check wether the algorithm ID
	does indeed belong to RSA.
	(_gcry_rsa_encrypt): Likewise.
	(_gcry_rsa_decrypt): Likewise.
	(_gcry_rsa_sign): Likewise.
	(_gcry_rsa_verify): Likewise.
	(_gcry_rsa_get_nbits): Likewise.

2003-05-30  Moritz Schulte  <moritz@g10code.com>
