@@ -1,3 +1,10 @@
+2003-06-11  Werner Koch  <wk@gnupg.org>
+
+	* rijndael.c (do_encrypt): Hack to force correct alignment.  It
+	seems not to be	not sufficient, though.  We should rework this
+	fucntions and remove all these ugly casts.  Let the compiler
+	optimize or have an assembler implementation.
+
 2003-06-09  Moritz Schulte  <moritz@g10code.com>
 
 	* Makefile.am: Removed rules serpent, since that is not commited
